# sitechecker

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  celerybeat-schedule  database.env  docker-compose.backup  docker-compose.yml  dockerfile  dump.rdb  manage.py  nginx.conf  pyproject.toml  requirements.txt  service_temp.html
accounts/: admin.py  forms.py  tests.py  urls.py  views.py
accounts/templates/: add_user.html  base_accounts.html  change_pass.html  edit_user.html  login.html  my_account.html  service_users.html  user_list.html
checker/: admin.py  apps.py  forms.py  models.py  redis_utils.py  tasks.py  urls.py  views.py
checker/migrations/: 0001_initial.py  0002_auto_20200509_1754.py  0003_auto_20200515_1049.py  0004_report.py  0005_auto_20200517_1908.py  0006_pinginfo_status.py  0007_sitelist_failure_count.py  0008_auto_20200521_0813.py  0010_sitelist_alert_type.py  (+1 more)
checkerapp/: admin.py  apps.py  forms.py  models.py  redis_utils.py  sms.py  socket  tasks.py  telegrambot.py  temp.py  urls.py  utils.py  views.py
plugins/: telegrambot.py
scripts/: add_plugin.py  remove_plugin.py  test_script.py
sitechecker/: __init__.py  asgi.py  celery.py  settings.py  storage_backends.py  urls.py  wsgi.py
templates/: add_http_check.html  add_ping_check.html  add_service.html  add_site.html  add_tcp_check.html  add_user.html  base.html  base_accounts.html  edit_site.html  edit_user.html  home.html  login.html  pdf.html  ping_info.html  service_checks.html  service_info.html  services.html  test.html  user_list.html
(+58 files in other folders)
